# zola-update-hook

./: Cargo.toml
src/: git_helper.rs  main.rs
